# advent-of-code-2022

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/aoc2022/: __init__.py  __main__.py  _util.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
